--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - docker images mannydesigns/node 
 
 before_deploy:
-  - docker login
+  - docker login --username="hassan.fatemi@gmail.com" --password="#Dk122616053"
 
 deploy:
   provider: script
